--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.html",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server"
+    "build": "yarn webpack --mode=production",
+    "dev": "yarn webpack-dev-server"
   },
   "dependencies": {
     "webpack": "^4.44.1",
